--- a/css/lumia.css
+++ b/css/lumia.css
@@ -5,12 +5,7 @@
   border-radius: 2px;
   overflow: visible;
   background: #303132;
-  background: -webkit-linear-gradient(left, #303132, #303132 2px, #4f5051 10px, #303132 20px, #303132 280px, #4f5051 290px, #303132 298px, #303132);
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -150px;
-  margin-top: -275px; }
+  background: -webkit-linear-gradient(left, #303132, #303132 2px, #4f5051 10px, #303132 20px, #303132 280px, #4f5051 290px, #303132 298px, #303132); }
 
 .lumia-dynamik {
   position: absolute;
@@ -85,16 +80,20 @@
     background: rgba(0, 0, 0, 0.2);
     right: 0; }
 
+.lumia-power-btn {
+  cursor: pointer; }
+
 .lumia-camera-btn {
-  top: 400px; }
+  top: 415px; }
 
 .lumia-display {
   background: #000000;
   width: 276px;
   height: 510px;
-  margin: 20px 12px;
+  margin: 0 12px;
   border-radius: 13px;
   position: relative;
+  top: 20px;
   overflow: hidden;
   box-shadow: inset 0 0 0 1px #000; }
   .lumia-display:after, .lumia-display:before {
@@ -113,33 +112,177 @@
     right: 0;
     border-radius: 10px/ 70% 25px 25px 70%; }
 
-.lumia-loading-dot {
+.lumia-loading .lumia-loading-dot {
+  display: none; }
+
+.lumia-loading__on.lumia-loading-dot {
   width: 2px;
   height: 2px;
   background: #1ca0e1;
   position: absolute;
+  display: block;
   left: 50%;
   top: 50%;
   margin-left: -1px;
   margin-top: -1px;
-  -webkit-animation: lumia-loading-animation 5.5s cubic-bezier(0.42, 0, 0.58, 1) 0s infinite; }
-  .lumia-loading-dot:nth-child(1) {
+  -webkit-animation: lumia-loading-animation 5.5s ease-in-out 0s infinite;
+  -moz-animation: lumia-loading-animation 5.5s ease-in-out 0s infinite;
+  -ms-animation: lumia-loading-animation 5.5s ease-in-out 0s infinite;
+  -o-animation: lumia-loading-animation 5.5s ease-in-out 0s infinite;
+  animation: lumia-loading-animation 5.5s ease-in-out 0s infinite; }
+  .lumia-loading__on.lumia-loading-dot:nth-child(1) {
+    margin-left: -21px;
+    -webkit-animation-delay: 0.8s;
+    -moz-animation-delay: 0.8s;
+    -ms-animation-delay: 0.8s;
+    -o-animation-delay: 0.8s;
+    animation-delay: 0.8s; }
+  .lumia-loading__on.lumia-loading-dot:nth-child(2) {
     margin-left: -11px;
-    -webkit-animation-delay: 0.8s; }
-  .lumia-loading-dot:nth-child(2) {
+    -webkit-animation-delay: 0.6s;
+    -moz-animation-delay: 0.6s;
+    -ms-animation-delay: 0.6s;
+    -o-animation-delay: 0.6s;
+    animation-delay: 0.6s; }
+  .lumia-loading__on.lumia-loading-dot:nth-child(3) {
     margin-left: -1px;
-    -webkit-animation-delay: 0.6s; }
-  .lumia-loading-dot:nth-child(3) {
+    -webkit-animation-delay: 0.4s;
+    -moz-animation-delay: 0.4s;
+    -ms-animation-delay: 0.4s;
+    -o-animation-delay: 0.4s;
+    animation-delay: 0.4s; }
+  .lumia-loading__on.lumia-loading-dot:nth-child(4) {
     margin-left: 9px;
-    -webkit-animation-delay: 0.4s; }
-  .lumia-loading-dot:nth-child(4) {
+    -webkit-animation-delay: 0.2s;
+    -moz-animation-delay: 0.2s;
+    -ms-animation-delay: 0.2s;
+    -o-animation-delay: 0.2s;
+    animation-delay: 0.2s; }
+  .lumia-loading__on.lumia-loading-dot:nth-child(5) {
     margin-left: 19px;
-    -webkit-animation-delay: 0.2s; }
-  .lumia-loading-dot:nth-child(5) {
-    margin-left: 29px;
-    -webkit-animation-delay: 0s; }
+    -webkit-animation-delay: 0s;
+    -moz-animation-delay: 0s;
+    -ms-animation-delay: 0s;
+    -o-animation-delay: 0s;
+    animation-delay: 0s; }
 
 @-webkit-keyframes lumia-loading-animation {
+  0% {
+    left: 50%;
+    top: 50%; }
+
+  10% {
+    top: 50%;
+    left: 110%; }
+
+  11% {
+    top: 110%;
+    left: 110%; }
+
+  12% {
+    top: 110%;
+    left: -10%; }
+
+  13% {
+    top: 50%;
+    left: -10%; }
+
+  40% {
+    top: 50%;
+    left: -10%; }
+
+  50%, 100% {
+    left: 50%;
+    top: 50%; } }
+
+@-moz-keyframes lumia-loading-animation {
+  0% {
+    left: 50%;
+    top: 50%; }
+
+  10% {
+    top: 50%;
+    left: 110%; }
+
+  11% {
+    top: 110%;
+    left: 110%; }
+
+  12% {
+    top: 110%;
+    left: -10%; }
+
+  13% {
+    top: 50%;
+    left: -10%; }
+
+  40% {
+    top: 50%;
+    left: -10%; }
+
+  50%, 100% {
+    left: 50%;
+    top: 50%; } }
+
+@-ms-keyframes lumia-loading-animation {
+  0% {
+    left: 50%;
+    top: 50%; }
+
+  10% {
+    top: 50%;
+    left: 110%; }
+
+  11% {
+    top: 110%;
+    left: 110%; }
+
+  12% {
+    top: 110%;
+    left: -10%; }
+
+  13% {
+    top: 50%;
+    left: -10%; }
+
+  40% {
+    top: 50%;
+    left: -10%; }
+
+  50%, 100% {
+    left: 50%;
+    top: 50%; } }
+
+@-o-keyframes lumia-loading-animation {
+  0% {
+    left: 50%;
+    top: 50%; }
+
+  10% {
+    top: 50%;
+    left: 110%; }
+
+  11% {
+    top: 110%;
+    left: 110%; }
+
+  12% {
+    top: 110%;
+    left: -10%; }
+
+  13% {
+    top: 50%;
+    left: -10%; }
+
+  40% {
+    top: 50%;
+    left: -10%; }
+
+  50%, 100% {
+    left: 50%;
+    top: 50%; } }
+
+@keyframes lumia-loading-animation {
   0% {
     left: 50%;
     top: 50%; }
@@ -181,7 +324,7 @@
 
 .lumia-display-footer {
   position: absolute;
-  bottom: 50px;
+  bottom: 55px;
   padding: 0 30px;
   width: 216px; }
 
@@ -287,3 +430,443 @@
     position: absolute;
     left: -5px;
     top: 11px; }
+
+.lumia-screen {
+  position: absolute;
+  width: 240px;
+  height: 400px;
+  left: 50%;
+  top: 33px;
+  margin-left: -120px;
+  color: #ccc;
+  overflow: hidden; }
+
+.lumia-off .lumia-screen {
+  display: none; }
+
+.lumia-screen-headline {
+  height: 30px;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  z-index: 100; }
+
+.lumia-icon-celuar {
+  position: absolute;
+  top: 8px;
+  left: 4px;
+  width: 19px;
+  height: 10px;
+  overflow: hidden; }
+  .lumia-icon-celuar:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 2px;
+    height: 10px;
+    background: #c6c6c6;
+    box-shadow: #c6c6c6 -3px 2px 0, #c6c6c6 -6px 4px 0, #c6c6c6 -9px 6px 0, #c6c6c6 -12px 8px 0; }
+
+.lumia-icon-wifi {
+  width: 14px;
+  height: 14px;
+  border: 2px rgba(0, 0, 0, 0) solid, 4px #cccccc solid;
+  overflow: hidden;
+  position: absolute;
+  top: 6px;
+  left: 100px;
+  -webkit-transform: scale(0.8); }
+  .lumia-icon-wifi:before {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    bottom: -1px;
+    right: -1px;
+    background: #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 0 2px #000, 0 0 0 4px #ccc, 0 0 0 6px #000, 0 0 0 8px #ccc, 0 0 0 10px #000, 0 0 0 12px #ccc; }
+
+.lumia-icon-battery {
+  position: absolute;
+  height: 7px;
+  width: 14px;
+  border: 1px solid #c6c6c6;
+  border-radius: 1px;
+  right: 46px;
+  top: 9px; }
+  .lumia-icon-battery:after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 1px;
+    border: 1px solid #c6c6c6;
+    right: -3px;
+    top: 1px; }
+  .lumia-icon-battery:before {
+    content: '';
+    position: absolute;
+    height: 5px;
+    width: 10px;
+    background: #c6c6c6;
+    left: 1px;
+    top: 1px; }
+
+.lumia-headline-time {
+  position: absolute;
+  right: 10px;
+  line-height: 10px;
+  font-size: 10px;
+  font-weight: 400;
+  top: -10px;
+  -webkit-transition: top .2s;
+  -moz-transition: top .2s;
+  transition: top .2s; }
+
+.lumia-on .lumia-headline-time {
+  top: 8px;
+  -webkit-transition: top .4s;
+  -moz-transition: top .4s;
+  transition: top .4s; }
+
+.lumia-icon-go2apps {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border: 2px #fefcfb solid;
+  border-radius: 10px;
+  bottom: 10px;
+  right: 22px;
+  overflow: hidden;
+  opacity: .9; }
+  .lumia-icon-go2apps:before {
+    content: '\2794';
+    color: #fefcfb;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    line-height: 17px;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    position: absolute; }
+
+.lumia-lockscreen {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  z-index: 10;
+  font-size: 30px;
+  line-height: 35px;
+  font-weight: 300;
+  cursor: default; }
+
+.lumia-lockscreen-time {
+  margin: 220px 0 0 10px;
+  position: relative;
+  display: inline-block; }
+
+.lumia-lockscreen-time-icon {
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 10px;
+  border: 1px #ccc solid;
+  right: -15px;
+  top: 10px; }
+  .lumia-lockscreen-time-icon:after, .lumia-lockscreen-time-icon:before {
+    content: '';
+    position: absolute;
+    background: #ccc;
+    width: 5px;
+    height: 3px;
+    top: -30%;
+    border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+    -webkit-transform: skale(0.8); }
+  .lumia-lockscreen-time-icon:after {
+    right: -20%;
+    -webkit-transform: scale(0.8) rotate(30deg); }
+  .lumia-lockscreen-time-icon:before {
+    left: -25%;
+    -webkit-transform: scale(0.8) rotate(-30deg); }
+  .lumia-lockscreen-time-icon i {
+    position: absolute;
+    left: 43%;
+    width: 1px;
+    background: #ccc;
+    height: 4px;
+    top: 1px; }
+    .lumia-lockscreen-time-icon i:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 3px;
+      height: 1px;
+      background: #ccc; }
+
+.lumia-lockscreen-date {
+  margin: 0 0 0 10px; }
+
+.lumia-icon-big {
+  background: #00afe4;
+  width: 105px;
+  height: 105px;
+  position: absolute; }
+
+.lumia-icon-small {
+  background: #00afe4;
+  width: 47.5px;
+  height: 47.5px;
+  position: absolute; }
+
+.lumia-icon-1 {
+  left: 10px;
+  top: 30px; }
+
+.lumia-icon-2 {
+  right: 10px;
+  top: 30px; }
+
+.lumia-icon-3 {
+  left: 10px;
+  top: 145px; }
+
+.lumia-icon-4 {
+  left: 125px;
+  top: 145px; }
+
+.lumia-icon-5 {
+  left: 182.5px;
+  top: 145px; }
+
+.lumia-icon-6 {
+  left: 125px;
+  top: 202.5px; }
+
+.lumia-icon-7 {
+  left: 182.5px;
+  top: 202.5px;
+  display: none; }
+
+.lumia-icon-8 {
+  left: 10px;
+  top: 260px; }
+
+.lumia-icon-9 {
+  left: 125px;
+  top: 260px;
+  display: none; }
+
+.lumia-icon-title {
+  color: #fefcfb;
+  font-size: 12px;
+  line-height: 12px;
+  position: absolute;
+  bottom: 7px;
+  left: 8px; }
+
+.lumia-i-phone {
+  position: absolute;
+  background: #fefcfb;
+  width: 50px;
+  height: 18px;
+  left: 25px;
+  top: 45px;
+  border-radius: 0 0 50% 50% / 70%;
+  -webkit-transform: rotate(65deg);
+  -moz-transform: rotate(65deg);
+  transform: rotate(65deg); }
+  .lumia-i-phone:before {
+    content: '';
+    position: absolute;
+    width: 13px;
+    height: 5px;
+    background: #fefcfb;
+    top: -2px;
+    border-radius: 3px 3px 0 0;
+    box-shadow: 37px 0 0 #fefcfb; }
+  .lumia-i-phone:after {
+    content: '';
+    background: #00afe4;
+    width: 24px;
+    height: 10px;
+    top: -2px;
+    left: 13px;
+    border-radius: 3px;
+    position: absolute; }
+
+.lumia-i-messaging {
+  color: #00afe4;
+  font-size: 13px;
+  line-height: 26px;
+  width: 35px;
+  height: 26px;
+  text-align: center;
+  background: #fefcfb;
+  border-radius: 4px;
+  position: absolute;
+  left: 35px;
+  top: 37px;
+  letter-spacing: 1.5px; }
+  .lumia-i-messaging:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    bottom: -10px;
+    left: 2px;
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent #fefcfb transparent transparent;
+    -webkit-transform: skew(10deg);
+    -moz-transform: skew(10deg);
+    transform: skew(10deg); }
+
+.lumia-i-email {
+  width: 40px;
+  height: 30px;
+  border: 3px #fefcfb solid;
+  left: 50%;
+  top: 50%;
+  margin-left: -23px;
+  margin-top: -22px;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 3px; }
+  .lumia-i-email:after, .lumia-i-email:before {
+    content: '';
+    position: absolute;
+    width: 73%;
+    height: 3px;
+    top: 8px;
+    background: #fefcfb;
+    border-radius: 3px; }
+  .lumia-i-email:after {
+    -webkit-transform: rotate(40deg);
+    left: -5px; }
+  .lumia-i-email:before {
+    -webkit-transform: rotate(-40deg);
+    right: -6px; }
+
+.lumia-i-calendar {
+  width: 18px;
+  height: 12px;
+  background: #00afe4;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -10px;
+  margin-top: -9px;
+  border-style: solid;
+  border-width: 6px 2px 2px 2px;
+  border-color: #fefcfb;
+  line-height: 12px;
+  font-size: 10px;
+  color: #fefcfb;
+  text-align: center;
+  border-radius: 1px;
+  overflow: visible; }
+  .lumia-i-calendar:before, .lumia-i-calendar:after {
+    content: '';
+    width: 2px;
+    height: 5px;
+    border-radius: 10px;
+    border: 1px #00afe4 solid;
+    position: absolute;
+    top: -9px;
+    background: #FFF; }
+  .lumia-i-calendar:before {
+    left: 1px; }
+  .lumia-i-calendar:after {
+    right: 1px; }
+
+.lumia-i-calculator {
+  background: #fefcfb;
+  position: absolute;
+  width: 17px;
+  height: 23px;
+  left: 50%;
+  top: 50%;
+  margin-left: -8px;
+  margin-top: -12px;
+  border-radius: 2px; }
+  .lumia-i-calculator:before {
+    content: '';
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    background: #00afe4;
+    border-radius: 1px;
+    width: 13px;
+    height: 4px; }
+  .lumia-i-calculator:after {
+    content: '';
+    position: absolute;
+    left: 2px;
+    top: 8px;
+    background: #00afe4;
+    border-radius: 1px;
+    width: 3px;
+    height: 3px;
+    box-shadow: 5px 0 0 #00afe4, 10px 0 0 #00afe4, 0 5px 0 #00afe4, 5px 5px 0 #00afe4, 10px 5px 0 #00afe4, 0 10px 0 #00afe4, 5px 10px 0 #00afe4, 10px 10px 0 #00afe4; }
+
+.lumia-i-camera {
+  background: #fefcfb;
+  position: absolute;
+  width: 50px;
+  height: 35px;
+  left: 50%;
+  top: 50%;
+  margin-left: -25px;
+  margin-top: -17px;
+  border-radius: 5px; }
+  .lumia-i-camera:before {
+    content: '';
+    position: absolute;
+    width: 40%;
+    height: 6px;
+    background: #fefcfb;
+    top: -6px;
+    left: 50%;
+    margin-left: -20%;
+    border-radius: 25% 25% 0 0 / 100% 100% 0 0; }
+  .lumia-i-camera:after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    background: #00afe4;
+    left: 5px;
+    top: 5px;
+    border-radius: 3px; }
+  .lumia-i-camera .lumia-i-camera-obj {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    border: 2px #00afe4 solid;
+    border-radius: 10px;
+    width: 14px;
+    height: 14px;
+    margin-left: -9px;
+    margin-top: -9px; }
+
+.lumia-icon-highlights {
+  position: absolute;
+  left: 13px;
+  top: 13px;
+  height: 11px;
+  width: 11px;
+  box-shadow: 13px 0 0 rgba(255, 255, 255, 0.9), 0 13px 0 rgba(255, 255, 255, 0.8), 13px 13px 0 rgba(255, 255, 255, 0.7);
+  border-radius: 1px; }
+  .lumia-icon-highlights:before {
+    content: '★';
+    position: absolute;
+    left: -5px;
+    top: -5px;
+    color: #fefcfb;
+    font-size: 16px;
+    line-height: 16px; }
