--- a/css/lumia.scss
+++ b/css/lumia.scss
@@ -17,6 +17,7 @@ $bg_light : #fefcfb;
 	overflow      : visible;
 	background    : #303132;
 	background    : -webkit-linear-gradient(left, #303132, #303132 2px, #4f5051 10px, #303132 20px, #303132 $device-width - 20px, #4f5051 $device-width - 10px, #303132 $device-width - 2px, #303132);
+	background    : linear-gradient(to right, #303132, #303132 2px, #4f5051 10px, #303132 20px, #303132 $device-width - 20px, #4f5051 $device-width - 10px, #303132 $device-width - 2px, #303132);
 }
 
 .lumia-dynamik {
@@ -59,6 +60,7 @@ $bg_light : #fefcfb;
 .lumia-voise-up-btn {
 	top           : 100px;
 	background    : -webkit-linear-gradient(top, #202020, #fff 15%, #fff 95%, #ccc 100%);
+	background    : linear-gradient(to bottom, #202020, #fff 15%, #fff 95%, #ccc 100%);
 	border-radius : 2px 0 2px 0 / 20%;
 	&:before {
 		content    : '';
@@ -74,6 +76,7 @@ $bg_light : #fefcfb;
 .lumia-voise-down-btn {
 	top           : 143px;
 	background    : -webkit-linear-gradient(top, #ccc, #fff 5%, #fff 85%, #202020 100%);
+	background    : linear-gradient(to bottom, #ccc, #fff 5%, #fff 85%, #202020 100%);
 	border-radius : 0 2px 0 2px / 20%;
 	&:before {
 		content    : '';
@@ -90,6 +93,7 @@ $bg_light : #fefcfb;
 .lumia-power-btn {
 	top           : 205px;
 	background    : -webkit-linear-gradient(top, #202020, #fff 15%, #fff 85%, #202020 100%);
+	background    : linear-gradient(to bottom, #202020, #fff 15%, #fff 85%, #202020 100%);
 	border-radius : 2px 0 0 2px / 20%;
 	&:before {
 		content    : '';
@@ -279,6 +283,8 @@ $bg_light : #fefcfb;
 	margin-left       : -8px;
 	position          : absolute;
 	-webkit-transform : skew(-15deg);
+	-moz-transform    : skew(-15deg);
+	transform         : skew(-15deg);
 }
 
 .lumia-icon-home-window {
@@ -421,6 +427,8 @@ $bg_light : #fefcfb;
 	top               : 6px;
 	left              : 100px;
 	-webkit-transform : scale(0.8);
+	-moz-transform    : scale(0.8);
+	transform         : scale(0.8);
 	&:before {
 		content       : '';
 		position      : absolute;
@@ -488,7 +496,7 @@ $bg_light : #fefcfb;
 	border        : 2px $bg_light solid;
 	border-radius : 10px;
 	bottom        : 10px;
-	right         : 22px;
+	right         : 15px;
 	overflow      : hidden;
 	opacity       : .9;
 	&:before {
@@ -497,10 +505,10 @@ $bg_light : #fefcfb;
 		width       : 100%;
 		height      : 100%;
 		left        : 0;
-		top         : 0;
+		top         : -1px;
 		line-height : 17px;
 		font-size   : 12px;
-		font-weight : 400;
+		font-weight : 200;
 		text-align  : center;
 		position    : absolute;
 	}
@@ -542,14 +550,20 @@ $bg_light : #fefcfb;
 		top               : -30%;
 		border-radius     : 50% 50% 0 0 / 100% 100% 0 0;
 		-webkit-transform : skale(0.8);
+		-moz-transform    : skale(0.8);
+		transform         : skale(0.8);
 	}
 	&:after {
 		right             : -20%;
 		-webkit-transform : scale(0.8) rotate(30deg);
+		-moz-transform    : scale(0.8) rotate(30deg);
+		transform         : scale(0.8) rotate(30deg);
 	}
 	&:before {
 		left              : -25%;
 		-webkit-transform : scale(0.8) rotate(-30deg);
+		-moz-transform    : scale(0.8) rotate(-30deg);
+		transform         : scale(0.8) rotate(-30deg);
 	}
 	i {
 		position   : absolute;
@@ -699,10 +713,14 @@ $bg_light : #fefcfb;
 	}
 	&:after {
 		-webkit-transform : rotate(40deg);
+		-moz-transform    : rotate(40deg);
+		transform         : rotate(40deg);
 		left              : -5px;
 	}
 	&:before {
 		-webkit-transform : rotate(-40deg);
+		-moz-transform    : rotate(-40deg);
+		transform         : rotate(-40deg);
 		right             : -6px;
 	}
 }
@@ -745,7 +763,6 @@ $bg_light : #fefcfb;
 }
 
 .lumia-i-calculator {
-	// background: $bg_icon;
 	background    : $bg_light;
 	position      : absolute;
 	width         : 17px;
@@ -779,7 +796,6 @@ $bg_light : #fefcfb;
 }
 
 .lumia-i-camera {
-	// background: $bg_icon;
 	background    : $bg_light;
 	position      : absolute;
 	width         : 50px;
@@ -830,8 +846,7 @@ $bg_light : #fefcfb;
 	top           : 13px;
 	height        : $i_metrics;
 	width         : $i_metrics;
-	box-shadow    : ($i_metrics + 2px) 0 0 rgba(255, 255, 255, 0.9), 0 ($i_metrics + 2px) 0 rgba(255, 255, 255, 0.8),
-		($i_metrics + 2px) ($i_metrics + 2px) 0 rgba(255, 255, 255, 0.7);
+	box-shadow    : ($i_metrics + 2px) 0 0 rgba(255, 255, 255, 0.9), 0 ($i_metrics + 2px) 0 rgba(255, 255, 255, 0.8), ($i_metrics + 2px) ($i_metrics + 2px) 0 rgba(255, 255, 255, 0.7);
 	border-radius : 1px;
 
 	&:before {
